src/styles/Contact.module.css
.contactContainer {
    max-width: 100vw;
    margin-left: calc(50% - 50vw);
    margin-right: calc(50% - 50vw);
    background-color: #1e9ec5;
    padding: 2rem;
    color: #fff;
}

.links {
    list-style: none;
    display: flex;
    justify-content: flex-end;
    gap: 1rem;
    margin-right: 2rem;

}


.form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: .8rem;
}

.input, .textarea {
    padding: .4rem;
    border: none;
    border-bottom: 2px solid #02707a;
    border-radius: 5px;
    background-color: #fff;
    font-family: inherit;
}



.textarea {
    height: 150px;
}

